fix(beta): checkbox/radio inputs alignment

--- a/first-paint/src/v3/modules/_checkbox.scss
+++ b/first-paint/src/v3/modules/_checkbox.scss
@@ -10,6 +10,7 @@
   --chk-bdr: none;
   --chk-bdr-w: medium;
   --chk-bdr-cl: transparent;
+  --chk-accent: green;
   --chk-bg: darkgray;
   --chk-size: 1.2rem;
   --chk-appearance: none;
@@ -47,16 +48,21 @@
   margin-inline-end: var(--lbl-me);
   gap: 0.3rem;
   cursor: pointer;
-  height: auto;
+  max-height: var(--chk-size);
   font-size: var(var(--chk-fs), var(--fs));
 
   :where([id][type="checkbox"]) {
     appearance: var(--chk-appearance);
     -webkit-appearance: var(--chk-appearance);
     -moz-appearance: var(--chk-appearance);
-    border-radius: var(--check-rds);
-    cursor: pointer;
-    margin: var(--chk-mg, 0);
+    // border-radius: var(--check-rds);
+    // cursor: pointer;
+    // margin: var(--chk-mg, 0);
+    // width: var(--chk-size);
+    // height: var(--chk-size);
+    // accent-color: var(--chk-accent);
+    // background-color: var(--chk-bg);
+    // border: thick solid gray;
 
     &::before {
       --chk-bdr-cl: lightgray;
